--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "input-otp": "^1.2.4",
     "lucide-react": "^0.446.0",
     "next": "^15.1.6",
+    "next-pwa": "^5.6.0",
     "next-themes": "^0.3.0",
     "postcss": "^8.5.1",
     "react": "18.2.0",
@@ -40,6 +41,7 @@
     "tailwindcss-animate": "^1.0.7",
     "typescript": "5.2.2",
     "vaul": "^0.9.9",
+    "web-push": "^3.6.7",
     "zod": "^3.23.8"
   }
 }
